refector: Distance 클래스 제거에 따른 Race 클래스 메소드 수정